--- a/src/app/pages/maps/maps.component.html
+++ b/src/app/pages/maps/maps.component.html
@@ -24,15 +24,15 @@
                 </div>
                 <div class="custom-control custom-radio mb-3">
                   <input name="custom-radio-1" class="custom-control-input" id="customRadio0" type="radio">
-                  <label class="custom-control-label" for="customRadio0" (click)="onClick('1:Oui')">Oui</label>
+                  <label class="custom-control-label" for="customRadio0" (click)="onClick('11')">Oui</label>
                 </div>
                 <div class="custom-control custom-radio mb-3">
                   <input name="custom-radio-1" class="custom-control-input" id="customRadio01" type="radio">
-                  <label class="custom-control-label" for="customRadio01" (click)="onClick('1:Non')">Non</label>
+                  <label class="custom-control-label" for="customRadio01" (click)="onClick('12')">Non</label>
                 </div>
                 <div class="custom-control custom-radio mb-3">
                   <input name="custom-radio-1" class="custom-control-input" id="customRadio02" type="radio">
-                  <label class="custom-control-label" for="customRadio02" (click)="onClick('1:Je ne préfère pas répondre')">Je ne préfère pas répondre</label>
+                  <label class="custom-control-label" for="customRadio02" (click)="onClick('13')">Je ne préfère pas répondre</label>
                 </div>
               </div>
             </div>
@@ -52,15 +52,15 @@
                 </div>
                 <div class="custom-control custom-radio mb-3">
                   <input name="custom-radio-2" class="custom-control-input" id="customRadio11" type="radio">
-                  <label class="custom-control-label" for="customRadio11" (click)="onClick('2:Oui')">Oui</label>
+                  <label class="custom-control-label" for="customRadio11" (click)="onClick('21')">Oui</label>
                 </div>
                 <div class="custom-control custom-radio mb-3">
                   <input name="custom-radio-2" class="custom-control-input" id="customRadio12" type="radio">
-                  <label class="custom-control-label" for="customRadio12" (click)="onClick('2:Non')">Non</label>
+                  <label class="custom-control-label" for="customRadio12" (click)="onClick('22')">Non</label>
                 </div>
                 <div class="custom-control custom-radio mb-3">
                   <input name="custom-radio-2" class="custom-control-input" id="customRadio13" type="radio">
-                  <label class="custom-control-label" for="customRadio13" (click)="onClick('2:Je ne préfère pas répondre')">Je ne préfère pas répondre</label>
+                  <label class="custom-control-label" for="customRadio13" (click)="onClick('23')">Je ne préfère pas répondre</label>
                 </div>
               </div>
             </div>
@@ -80,11 +80,11 @@
                 </div>
                 <div class="custom-control custom-radio mb-3">
                   <input name="custom-radio-3" class="custom-control-input" id="customRadio22" type="radio">
-                  <label class="custom-control-label" for="customRadio22" (click)="onClick('3:Oui')">Oui</label>
+                  <label class="custom-control-label" for="customRadio22" (click)="onClick('31')">Oui</label>
                 </div>
                 <div class="custom-control custom-radio mb-3">
                   <input name="custom-radio-3" class="custom-control-input" id="customRadio23" type="radio">
-                  <label class="custom-control-label" for="customRadio23" (click)="onClick('3:Non')">Non</label>
+                  <label class="custom-control-label" for="customRadio23" (click)="onClick('32')">Non</label>
                 </div>
               </div>
             </div>
@@ -104,15 +104,15 @@
                 </div>
                 <div class="custom-control custom-radio mb-3">
                   <input name="custom-radio-4" class="custom-control-input" id="customRadio31" type="radio">
-                  <label class="custom-control-label" for="customRadio31" (click)="onClick('4:Dans les bureaux')">Dans les bureaux</label>
+                  <label class="custom-control-label" for="customRadio31" (click)="onClick('41')">Dans les bureaux</label>
                 </div>
                 <div class="custom-control custom-radio mb-3">
                   <input name="custom-radio-4" class="custom-control-input" id="customRadio32" type="radio">
-                  <label class="custom-control-label" for="customRadio32" (click)="onClick('4:A lexterieur')">A l'exterieur</label>
+                  <label class="custom-control-label" for="customRadio32" (click)="onClick('42')">A l'exterieur</label>
                 </div>
                 <div class="custom-control custom-radio mb-3">
                   <input name="custom-radio-4" class="custom-control-input" id="customRadio33" type="radio">
-                  <label class="custom-control-label" for="customRadio33" (click)="onClick('4:Peu importe')">Peu importe</label>
+                  <label class="custom-control-label" for="customRadio33" (click)="onClick('43')">Peu importe</label>
                 </div>
               </div>
             </div>
@@ -132,11 +132,11 @@
                 </div>
                 <div class="custom-control custom-radio mb-3">
                   <input name="custom-radio-5" class="custom-control-input" id="customRadio41" type="radio">
-                  <label class="custom-control-label" for="customRadio41" (click)="onClick('5:Oui')">Oui</label>
+                  <label class="custom-control-label" for="customRadio41" (click)="onClick('51')">Oui</label>
                 </div>
                 <div class="custom-control custom-radio mb-3">
                   <input name="custom-radio-5" class="custom-control-input" id="customRadio42" type="radio">
-                  <label class="custom-control-label" for="customRadio42" (click)="onClick('5:Non')">Non</label>
+                  <label class="custom-control-label" for="customRadio42" (click)="onClick('52')">Non</label>
                 </div>
               </div>
             </div>
@@ -156,19 +156,19 @@
                 </div>
                 <div class="custom-control custom-radio mb-3">
                   <input name="custom-radio-6" class="custom-control-input" id="customRadio51" type="radio">
-                  <label class="custom-control-label" for="customRadio51" (click)="onClick('6:Quelque heures')">Quelque heures</label>
+                  <label class="custom-control-label" for="customRadio51" (click)="onClick('61')">Quelque heures</label>
                 </div>
                 <div class="custom-control custom-radio mb-3">
                   <input name="custom-radio-6" class="custom-control-input" id="customRadio52" type="radio">
-                  <label class="custom-control-label" for="customRadio52" (click)="onClick('6:Une demi-journée')">Une demi-journée</label>
+                  <label class="custom-control-label" for="customRadio52" (click)="onClick('62')">Une demi-journée</label>
                 </div>
                 <div class="custom-control custom-radio mb-3">
                   <input name="custom-radio-6" class="custom-control-input" id="customRadio53" type="radio">
-                  <label class="custom-control-label" for="customRadio53" (click)="onClick('6:Une journée')">Une journée</label>
+                  <label class="custom-control-label" for="customRadio53" (click)="onClick('63')">Une journée</label>
                 </div>
                 <div class="custom-control custom-radio mb-3">
                   <input name="custom-radio-6" class="custom-control-input" id="customRadio54" type="radio">
-                  <label class="custom-control-label" for="customRadio54" (click)="onClick('6:Plusieur journées')">Plusieurs journées</label>
+                  <label class="custom-control-label" for="customRadio54" (click)="onClick('64')">Plusieurs journées</label>
                 </div>
               </div>
             </div>
