--- a/src/app/pages/camion/edit-dialog-camion.html
+++ b/src/app/pages/camion/edit-dialog-camion.html
@@ -10,6 +10,10 @@
         <label for="numCarteGrise">N° Carte Grise</label>
         <input  class="form-control" [(ngModel)]="data.numCarteGrise" name="numCarteGrise" id="numCarteGrise">
       </div>
+      <div class="form-group">
+        <label for="kilometrage">Kilometrage</label>
+        <input  class="form-control" [(ngModel)]="data.kilometrage" name="numCarteGrise" id="numCarteGrise">
+      </div>
 
       
 </form>
